--- a/first-react/src/Admin/AddAppointment2.css
+++ b/first-react/src/Admin/AddAppointment2.css
@@ -1,3 +1,4 @@
+
 .ssss{
     background-color: orange;
 }
@@ -13,8 +14,7 @@
         width: 300px;
         height: 100%;
         padding: 10px;
-        margin-left: 4%;
-    
+        margin-left: 4%; 
 }
 
 .input-form-control3{
@@ -64,9 +64,12 @@
     margin-right:40px;
 }
 
-.success{
-width:60%;
+.AddAppointment2{
+width:200px;
+height: 30px;
+margin: 50px;
+border: none;
 background-color: rgb(232, 233, 233);
-border-radius: 2px;
+border-radius: 20px;
 
 }
