--- a/first-react/src/Admin/UpdateAppointment.css
+++ b/first-react/src/Admin/UpdateAppointment.css
@@ -1,10 +1,10 @@
-.section2{
+.AppointmentUpdate{
     background-color: orange;
 }
 
 
 
-.BoxStyle1 {
+.divUpdateAppointment {
     width: 40%;
    height: 60%;
     position: absolute;
@@ -17,123 +17,85 @@
 }
 
 
-.from1{
-  border-radius: 5px;
-  
-color: rgb(26, 19, 54);
-
-width: 50%;
-    height: 100%;
-    margin-top: 15px;
-    padding: 10px;
-    margin-right: 76px;
-
+.handle{
+    margin-right:40px;
 }
-.to1{
-    border-radius: 5px;
-  
-    color: rgb(26, 19, 54);
-    
-    width: 50%;
+
+.from333{
+    border-radius: none;
+        width: 300px;
         height: 100%;
-        margin-top: 15px;
         padding: 10px;
-        margin-right: 79px;
-}
-.c{
- 
-    border-radius: 5px;
-  
-    color: rgb(26, 19, 54);
+        margin-right: 20px;
+        
     
+}
+
+
+.from444{
+    border-radius: 5px;
+    color: rgb(26, 19, 54);
+    width: 300px;
+     height: 100%;
+     margin-top: 15px;
+     padding: 10px;
+     margin-left:2px;
+}
+.from555{
+    border-radius: 5px;
+    color: rgb(26, 19, 54);
     width: 50%;
-        height: 100%;
-        margin-top: 15px;
-        padding: 10px;
-        margin-right: 90px;
+     height: 100%;
+     margin-top: 15px;
+     padding: 10px;
+     margin-right: 76px;
 }
-.time1{
-  
+.from666{
+    border-radius: 5px;
+    color: rgb(26, 19, 54);
     width: 50%;
-    height: 100%;
-    margin-top: 15px;
-    padding: 10px;
-    margin-right: 70px;
-color: rgb(26, 19, 54);
+     height: 100%;
+     margin-top: 15px;
+     padding: 10px;
+     margin-right: 50px;
 }
-
-
-.time{
-    display: inline-block;
-    padding-left: 0px;
-    margin-left: 0;
-    margin-right: 40px;
-color: rgb(26, 19, 54);
-}
-
-.date{
-    display: inline-block;
-    margin-left: 0;
-    margin-right: 40px;
-    display: inline-block;
+.from777{
+    border-radius: 5px;
     color: rgb(26, 19, 54);
-}
-.number{
-    display: inline-block;
-    padding-left: 0px;
-    margin-left: 0;
-    margin-right: 50px;
-    color: rgb(26, 19, 54);
-}
-
-.date1{
     width: 50%;
-    height: 100%;
-    margin-top: 15px;
-    padding: 10px;
-    margin-right: 70px;
+     height: 100%;
+     margin-top: 15px;
+     padding: 10px;
+     margin-right: 90px;
+}
+.from888{
+    border-radius: 5px;
     color: rgb(26, 19, 54);
+    width: 50%;
+     height: 100%;
+     margin-top: 15px;
+     padding: 10px;
+     margin-right: 76px;
 }
+.AppointmentUpdatebutton{
+    width:200px;
+    height: 30px;
+    margin: 50px;
+    border: none;
+    background-color: rgb(232, 233, 233);
+    border-radius: 20px;
+    
+    }
 
-
-
-.number1{
-    width: 20%;
-    height: 100%;
-    margin-top: 15px;
-    padding:5px;
-    margin-right: 80px;
-    margin-left: 0px;
-    color: rgb(26, 19, 54);
-}
-
-
-.from{
-    display: inline-block;
-    margin-right: 50px;
-color: rgb(26, 19, 54);
-}
-
-.to{
-    display: inline-block;
-    padding: 0px;
-    margin-right: 75px;
-color: rgb(26, 19, 54);
-}
-.button{
-    color: rgb(26, 19, 54); 
-    border: 4px ;
-}
-
-.s{
-    background-color: orange;
-}
-
-.submit3{
-    margin: 2%;
-   padding: 2%;
-   background-color: rgb(224, 220, 220);
-   width: 50%;
-   color: rgb(20, 10, 65);
-   
-}
+    .TimeHandle{
+       padding: 40px;
+        margin-left: 20px;
+    }
+    .DayHandle{
+        padding: 40px;
+        margin-left: 10px;
+    }
+    .TicketHandle{
+        padding: 40px;
+        margin-left: -20px;
+    }
