--- a/first-react/src/Admin/tableee1.css
+++ b/first-react/src/Admin/tableee1.css
@@ -48,4 +48,15 @@
   .bu1:hover {
     background-color: #c1c2c1;
   }
-  
+  .Destina{
+    background-color: #eaebec;
+    color: black;
+    width: 200px;
+    height: 30px;
+    border-radius: 20px;
+    border: none;
+    margin-top: 110px;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'poppins',sans-serif;
+  }
